# tonic-tests

./: .env  Cargo.toml  build.rs  compose.yaml  diesel.toml  pgadmin.json
migrations/2025-06-09-171354_initial/: down.sql  up.sql
proto/: temporaldata.proto
src/: client.rs  models.rs  schema.rs  server.rs  temporaldata_repository.rs
