[package]
name = "temporaldata"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "temporal-data-server"
path = "src/server.rs"

[[bin]]
name = "temporal-data-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
chrono = "0.4.41"

[build-dependencies]
tonic-build = "0.13.1"